Fix cases alignment

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .knives-list {
